@@ -2,7 +2,7 @@
 
 #include <projects.h>
 
-char const pj_release[]="Rel. 4.8.0, 20 February 2012";
+char const pj_release[]="Rel. 4.8.0, 6 March 2012";
 
 const char *pj_get_release()
 
